Add aws cert, datalayer updates

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       location: "australia",
       currentEmployment: "The Lumery",
       previousEmployment: [{ name: "Shping" }, { name: "Leidos" }, { name: "Bernies" }, { name: "Luxottica" }],
-      technicalSkills: [{ name: "AWS", keyTerms: ["SA", "Lambda", "DynamoDB", "Kinesis", "S3", "API Gateway",] }, { name: "Node" }, { name: "React" }, { name: "Redux" }, { name: "Javascript" }, { name: "Tag Management", keyTerms: ["Adobe Launch", "Tealium", "GTM"] }, { name: "Ansible" }, { name: "Databases" }],
+      technicalSkills: [{ name: "AWS", keyTerms: ["SA", "Developer Tools", "Lambda", "DynamoDB", "Kinesis", "S3", "API Gateway",] }, { name: "Node" }, { name: "React" }, { name: "Redux" }, { name: "Javascript" }, { name: "CDPs", keyTerms: ["Boxever", "Audience Stream", "Adobe Experience Cloud"] }, { name: "Tag Management", keyTerms: ["Adobe Launch", "Tealium iQ", "GTM"] }, { name: "Ansible" }, { name: "Databases" }],
       education: [{
         institution: "Monash University",
         certificate: "Bachelor of Information Technology and Systems",
@@ -44,6 +44,7 @@
         notes: "Management major"
       }],
       certifications: [
+        { name: "Amazon Web Services (AWS) Developer Associate Certification", link: "https://mewc-files.s3-ap-southeast-2.amazonaws.com/mewc-certified-developer-associate-certificate.pdf" },
         { name: "Tealium AudienceStream Professional Certification" },
         { name: "Tealium AudienceStream and DataAccess Advanced User Certification" },
         { name: "Tealium iQ Basic Certification" },
