add a few fixes for release

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Michael E W Carter" />
-  <link rel="apple-touch-icon" href="logo192.png" />
-  <link rel="manifest" href="./manifest.json" />
-  <title>mewc</title>
-  <script>console.debug(`
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Michael E W Carter" />
+    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="manifest" href="./manifest.json" />
+    <meta name="description" content="Michael Carter @linktr.ee" />
+    <meta property="og:title" content="Michael Carter | mewc" />
+    <meta property="og:description" content="Michael Carter | Australia" />
+    <meta property="og:url" content="https://mewc.info" />
+    <title>mewc</title>
+    <script>
+      console.debug(`
 
 
 
@@ -26,16 +30,15 @@ _/      _/  _/_/_/_/      _/  _/        _/_/_/
 
 
 © ${new Date().getFullYear()} 🇦🇺
-`)</script>
-<script>
+`);
+    </script>
+    <script></script>
+  </head>
 
-</script>
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <!--
+  <body>
+    <noscript><h1>Michael Carter</h1><a href="https://linkedin.com/in/michael-carter-au">LinkedIn</a></noscript>
+    <div id="root"></div>
+    <!--
 
         _   _         _           _              _
        /\_\/\_\ _    /\ \        / /\      _   /\ \
@@ -51,7 +54,5 @@ _/      _/  _/_/_/_/      _/  _/        _/_/_/
 
 
     -->
-
-</body>
-
+  </body>
 </html>
